# mytest1

./: README.md
c/: demo.cpp  makefile  test
c/clua/: demo2.c  makefile  makefile.20170508  test.lua
c/clua/bak/: demo.c  test.lua
c/endian/: main.c  makefile  test
c/malloc/: a.txt
c/sha256/: makefile  sha256.c
c/sha256/sha/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.in
c/socket/: ser_socket.c  socser  win32socket.c
c/socket/demo2/: makefile  ser_socket.c  socser  thr_server.c
code/: anlj.ec  anljold.ec  makefile
sha256/: makefile  sha256.c  test
